--- a/example/callee/CMakeLists.txt
+++ b/example/callee/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(SRC_LIST userservice.cpp ../user.pb.cc)
 
 add_executable(provider ${SRC_LIST})
-target_link_libraries(provider myrpc protobuf)
+target_link_libraries(provider protobuf myrpc)
